--- a/lyric3.html
+++ b/lyric3.html
@@ -561,14 +561,14 @@ setInterval(() => {
 
     setInterval(() => {
         if (!isDetected) {
- console.log(trap);
-  console.clear();
+// console.log(trap);
+ // console.clear();
         }
     }, 1000);
 
     setInterval(() => {
         const t1 = performance.now();
-eval("debugger");
+//eval("debugger");
         const t2 = performance.now();
         if (t2 - t1 > 150) {
             isDetected = true;
@@ -827,5 +827,6 @@ styleeeee('style5',  { 'tenfonttencs': 'tenfonttencs', 'tenfonttencs2': 'tenfont
 styleeeee('style9',  { 'matna': 'matna' });
 styleeeee('style10', { 'maunen1': 'maunen1' });
 </script>
+
 
 <script src="./js/eimg3.js"></script>
