--- a/lyric3.html
+++ b/lyric3.html
@@ -311,7 +311,7 @@ Thật khó để mình quên đi
 </textarea></div>
 
   <div class="mt-3  my-2 text-center">
-<button id="button123a" onclick="taoanhfree()" class="btntaoanhfree ttn my-2"><i class="fa-solid fa-screwdriver-wrench"></i> TẠO ẢNH </button>
+<button id="loadingg" onclick="taoanhfree()" class="btntaoanhfree ttn my-2"><i class="fa-solid fa-screwdriver-wrench"></i> TẠO ẢNH </button>
 <br/>
  <b class="mt-3" id="taianh1"></b> <b class="mt-3" id="taianh2"></b>
 </div>
@@ -830,4 +830,5 @@ styleeeee('style10', { 'maunen1': 'maunen1' });
 
 
 <script src="./js/eimg3.js"></script>
+
 
